--- a/package.json
+++ b/package.json
@@ -18,18 +18,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-responsive-modal": "^6.1.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "craco start",
@@ -58,8 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@types/ramda": "^0.27.45",
-    "@types/styled-components": "^5.1.14",
     "autoprefixer": "^9",
     "gh-pages": "^3.2.3",
     "postcss": "^7",
