--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# keypairs
-keypair.json
-
 # dependencies
 /node_modules
 /.pnp
@@ -27,3 +24,5 @@ yarn-error.log*
 .env
 .env.*
 !.env.example
+
+public/traits/
