--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
+    "@heroicons/react": "^1.0.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@project-serum/anchor": "^0.14.0",
+    "@react-aria/listbox": "^3.3.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.5.2",
     "@solana/wallet-adapter-material-ui": "^0.11.0",
@@ -18,13 +20,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framer-motion": "^5.2.1",
+    "node-sass": "^6.0.1",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
+    "react-aria": "^3.10.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-responsive-modal": "^6.1.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1"
+    "react-stately": "^3.9.0",
+    "scroll-into-view-if-needed": "^2.2.28",
+    "styled-components": "^5.3.1",
+    "swiper": "6.8.4"
   },
   "scripts": {
     "start": "craco start",
